2009-12-17 Ali Erkan İMREK <alierkanimrek.gmail.com>
     * Repo size adding to metadata.xml
     * Calculate estimated ISO size
     * Some gui fix
2009-12-12 Ali Erkan İMREK <alierkanimrek.gmail.com>
     * Package sizes adding to files.xml
2009-11-24 Ali Erkan İMREK <alierkanimrek.gmail.com>
	 * Packager name and email saved conf file
2009-11-22 Ali Erkan İMREK <alierkanimrek.gmail.com>
	 * .conf File support and Options dialog added
2009-11-16 Ali Erkan İMREK <alierkanimrek.gmail.com>
	 * Version 0.1 released
2009-10-24 Ali Erkan İMREK <alierkanimrek.gmail.com>
         * First upload