@@ -1,3 +1,5 @@
+2010-01-13 Ali Erkan İMREK <alierkanimrek.gmail.com>
+     * Hybrid ISO feature #Issue 3
 2009-12-17 Ali Erkan İMREK <alierkanimrek.gmail.com>
      * Repo size adding to metadata.xml
      * Calculate estimated ISO size
